--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,4 +1,4 @@
-name: Cypress Tests
+name: Cypress Cucumber Tests
 
 on:
   push:
@@ -22,5 +22,5 @@ jobs:
       - name: Instalar dependências
         run: npm install
 
-      - name: Rodar Cypress
-        run: npx cypress run
+      - name: Rodar testes do Cypress com Cucumber
+        run: npm test
